[package]
name = "shm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["macros", "rt", "signal", "time"] }
tokio-util = "0.7"
